--- a/style.css
+++ b/style.css
@@ -1,221 +1,213 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&amp;display=swap');
-*{
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    }
+}
 
-html{
+html {
     font-size: 11px;
-    font-family: Garamond;
+    font-family: 'Garamond', serif;
     scroll-behavior: smooth;
 }
-a{
+
+a {
     text-decoration: none;
 }
-.container{
 
+.container {
     min-height: 100vh;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: right;
-    flex-direction: left; 
+    justify-content: flex-end;
 }
-.image
-{
+
+.image {
     padding-left: 10px;
 }
-img{
+
+img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
-p{
+
+p {
     color: black;
     font-size: 1.4rem;
     margin-top: 5px;
-    font-weight: 300px;
+    font-weight: 300;
     letter-spacing: .05rem;
 }
-/* header */
-#header{
+
+/* Header */
+#header {
     position: fixed;
     z-index: 1000;
     left: 0;
     top: 0;
     width: 100vw;
-    height: auto;
 }
-#header .header{
-    min-height: 8vh;
-    background-color: qlineargradient(spread:pad, x1:0.5, y1:0, x2:1, y2:1, 
-    stop:0.09 rgba(232, 65, 75, 255), 
-    stop:0.78 rgba(47, 87, 149, 255));
 
+#header .header {
+    min-height: 8vh;
+    background: linear-gradient(to bottom right, rgba(232, 65, 75, 1) 9%, rgba(47, 87, 149, 1) 78%);
 }
-#header .nav-bar{
+
+#header .nav-bar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    height: 100%;
     max-width: 1300px;
     padding: 0 10px;
-}
-#header .nav-list ul {
-	list-style: none;
-	position: absolute;
-	background-color: #3FEEE6;
-	width: 100vw;
-	height: 100vh;
-	left: 100%;
-	top: 0;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	z-index: 1;
-	overflow-x: hidden;
-	transition: 0.5s ease left;
-}
-#header .nav-list ul.active {
-	left: 0%;
-}
-#header .nav-list ul a {
-	font-size: 2.5rem;
-	font-weight: 500;
-	letter-spacing: 0.2rem;
-	text-decoration: none;
-	color: white;
-	text-transform: uppercase;
-	padding: 20px;
-	display: block;
-}
-#header .nav-list ul a::after {
-	content: attr(data-after);
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) scale(0);
-	color: rgba(240, 248, 255, 0.021);
-	font-size: 13rem;
-	letter-spacing: 50px;
-	z-index: -1;
-	transition: 0.3s ease letter-spacing;
-}
-#header .nav-list ul li:hover a::after {
-	transform: translate(-50%, -50%) scale(.5);
-	letter-spacing: initial;
-    color: black;
-}
-#header .nav-list ul li :hover
-{
-    color: black;
-}
-#header .hamburger {
-	height: 60px;
-	width: 60px;
-	display: inline-block;
-	border: 4px solid white;
-	border-radius: 52%;
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	z-index: 100;
-	cursor: pointer;
-	transform: scale(0.8);
-	margin-right: 20px;
-}
-#header .hamburger:after {
-	position: absolute;
-	content: '';
-	height: 50%;
-	width: 50%;
-	border-radius: 50%;
-	border: 2px solid white;
-	animation: hamburger_puls 1s ease infinite;
-}
-#header .hamburger .bar {
-	height: 2px;
-	width: 30px;
-	position: relative;
-	background-color: #00308F;
-	z-index: -1;
-}
-#header .hamburger .bar::after,
-#header .hamburger .bar::before {
-	content: '';
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	left: 0;
-	background-color: #00308F;
-	transition: 0.3s ease;
-	transition-property: top, bottom;
-}
-#header .hamburger .bar::after {
-	top: 8px;
-}
-#header .hamburger .bar::before {
-	bottom: 8px;
+    height: 100%;
+    width: 100%;
 }
 
-.logo
-{
+#header .nav-list ul {
+    list-style: none;
+    position: absolute;
+    background-color: #3FEEE6;
+    width: 100vw;
+    height: 100vh;
+    left: 100%;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transition: 0.5s ease left;
+}
+
+#header .nav-list ul.active {
+    left: 0;
+}
+
+#header .nav-list ul a {
+    font-size: 2.5rem;
+    font-weight: 500;
+    color: white;
+    text-transform: uppercase;
+    padding: 20px;
+    display: block;
+    position: relative;
+}
+
+#header .nav-list ul a::after {
+    content: attr(data-after);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    color: rgba(240, 248, 255, 0.021);
+    font-size: 13rem;
+    letter-spacing: 50px;
+    z-index: -1;
+    transition: 0.3s ease letter-spacing;
+}
+
+#header .nav-list ul li:hover a::after {
+    transform: translate(-50%, -50%) scale(0.5);
+    letter-spacing: initial;
+    color: black;
+}
+
+#header .nav-list ul li:hover a {
+    color: black;
+}
+
+#header .hamburger {
+    height: 60px;
+    width: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 4px solid white;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+#header .hamburger:after {
+    content: '';
+    position: absolute;
+    height: 50%;
+    width: 50%;
+    border-radius: 50%;
+    border: 2px solid white;
+    animation: hamburger_puls 1s ease infinite;
+}
+
+#header .hamburger .bar {
+    height: 2px;
+    width: 30px;
+    background-color: #00308F;
+    position: relative;
+}
+
+#header .hamburger .bar::after,
+#header .hamburger .bar::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: #00308F;
+}
+
+#header .hamburger .bar::after {
+    top: 8px;
+}
+
+#header .hamburger .bar::before {
+    bottom: 8px;
+}
+
+.logo {
     width: 40px;
     height: 40px;
-    border-style: ;
-margin-left: 10px;
-border-radius: 20px;
+    border-radius: 50%;
+    margin-left: 10px;
 }
-/* end header */
-/* My section */
-#my-section{
-  
+
+/* Section - Intro */
+#my-section {
     background-size: cover;
     background-position: top center;
     position: relative;
     z-index: 1;
-    
 }
-#my-section::after{
+
+#my-section::after {
+    content: "";
     position: absolute;
     left: 0;
     top: 0;
     height: 80%;
     width: 80%;
- 
-    opacity: .7;
+    opacity: 0.7;
     z-index: -1;
 }
-#my-section .my{
+
+#my-section .my {
     max-width: 1000px;
     margin: 0 auto;
     padding: 0 30px;
-    justify-content: flex-start;
 }
-#my-section h1{
-    display: block;
-    position: relative;
-    width: fit-content;
+
+#my-section h1 {
     font-size: 3rem;
-    color:  transparent;
+    color: transparent;
     animation: text_reveal 1s ease forwards;
-    animation-delay: 1.5s;
 }
-#my-section h1:nth-child(1){
-    animation-delay: 1s;
-}
-#my-section h1:nth-child(2){
-    animation-delay: 2s;
-}
-#my-section h1:nth-child(3){
+
+#my-section h1:nth-child(3) {
     animation: text_reveal_name 1s ease forwards;
-    animation-delay: 3s;
 }
-#my-section h1 span{
+
+#my-section h1 span {
     position: absolute;
     top: 0;
     left: 0;
@@ -223,183 +215,175 @@ border-radius: 20px;
     width: 0;
     background-color: white;
     animation: text_reveal_box 1s ease;
-    animation-delay: 5s;
 }
 
-#my-section h1:nth-child(1) span{
-    animation-delay: .5s;
-}
-#my-section h1:nth-child(2) span{
-    animation-delay: 1.5s;
-}
-#my-section h1:nth-child(3) span{
-    animation-delay: 2.5s;
-}
-
-.section-title{
-    font-size : 4rem;
-    font-weight: 300px;
+.section-title {
+    font-size: 4rem;
+    font-weight: 300;
     color: #15f4ee;
     margin-bottom: 10px;
     text-transform: uppercase;
-    text-align:center
-    
+    text-align: center;
 }
 
-.section-title span{
+.section-title span {
     color: black;
 }
-.cta{
+
+.cta {
     display: inline-block;
     padding: 10px 20px;
     color: black;
     background-color: transparent;
-    border: 8px solid #3FEEE6;
-    font-size: 3rem;
+    border: 3px solid #3FEEE6;
+    font-size: 2rem;
     text-transform: uppercase;
-    letter-spacing: .1rem;
-    margin-top: 30px;
-    transition: .3s ease;
+    letter-spacing: 0.1rem;
     border-radius: 30px;
-    transition-property: background-color, color;
+    transition: 0.3s ease;
 }
-.cta:hover{
+
+.cta:hover {
     color: white;
-    background-color:#3FEEE6;
+    background-color: #3FEEE6;
 }
-.name h1{
+
+.name h1 {
     font-size: 3rem;
-
     color: black;
-    font-style:Comic Sans;
-
+    font-family: 'Arial', sans-serif;
 }
 
-
-
-
-#about .about{
+/* About Section */
+#about .about {
+    display: flex;
     flex-direction: column-reverse;
     text-align: center;
     max-width: 1000px;
     margin: 0 auto;
-    padding: 70px 0px;
+    padding: 70px 0;
 }
-#about .col-left{
+
+#about .col-left {
     width: 300px;
     height: 300px;
 }
 
-#about .col-right h2{
+#about .col-right h2 {
     font-size: 2.5rem;
     font-weight: 500;
-    letter-spacing: .2rem;
+    letter-spacing: 0.2rem;
     margin-bottom: 5px;
 }
-#about .col-right p{
+
+#about .col-right p {
     font-size: 1.6rem;
     margin-bottom: 20px;
 }
 
-#about .col-right .cta{
-    color: black;
-    margin-bottom: 30px;
-    padding: 10px 20px;
+#about .col-right .cta {
     font-size: 2rem;
+    margin-bottom: 30px;
 }
-#about .col-left .about-img{
+
+#about .col-left .about-img {
     height: 100%;
     width: 100%;
     position: relative;
     border-radius: 20px;
 }
 
-#about .col-left .about-img::after{
+#about .col-left .about-img::after {
     content: '';
     position: absolute;
     left: -23px;
     top: 29px;
-    bottom: -12px;
     height: 96%;
     width: 100%;
     border: 10px solid black;
     z-index: -1;
 }
-#project .project{
-padding-top: 30px;
+
+/* Project Section */
+#project .project {
+    padding-top: 30px;
+    display: flex;
     flex-direction: column;
     max-width: 1200px;
     margin: 0 auto;
-
 }
 
-#project .project-items{
+#project .project-items {
     width: 400px;
 }
-#project .project-item{
+
+#project .project-item {
     width: 82%;
-    padding: 20px;
-    text-align: center;
-    border-radius: 10px;
     padding: 30px;
     margin: 30px;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 0 18px rgba(0, 0, 0, 0.17);
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    box-shadow: 0px 0px 18px 0 #0000002c;
+    align-items: center;
 }
-#project .project-item:hover{
-    box-shadow: 0px 0px 5px 0 #B2FFFF;
-    transition: .3s  ease box-shadow;
+
+#project .project-item:hover {
+    box-shadow: 0 0 5px #B2FFFF;
+    transition: 0.3s ease;
 }
-#project .icon{
+
+#project .icon {
     width: 30%;
-    margin: 0 auto;
     margin-bottom: 10px;
 }
-#project .project-info h1{
-    font-size: 2.5rem;
-    font-weight: 20px;
-    margin-bottom: 5px;
 
+#project .project-info h1 {
+    font-size: 2.5rem;
+    font-weight: 600;
+    margin-bottom: 5px;
 }
-#project .project-info h2{
+
+#project .project-info h2 {
     font-size: 1.3rem;
     line-height: 2rem;
     font-weight: 500;
 }
-/* end contact */
-/* footer start */
-#footer{
-    background-color:#3FEEE6;
-}
-#footer .footer{
-    min-height:  100px;
-    flex-direction: column;
-    padding-top: 10px;
-    padding-bottom: 10px;
 
+/* Footer */
+#footer {
+    background-color: #3FEEE6;
 }
-#footer h2{
+
+#footer .footer {
+    min-height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0;
+}
+
+#footer h2 {
     color: white;
     font-weight: 500;
     font-size: 1.8rem;
-    letter-spacing: .1rem;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    letter-spacing: 0.1rem;
+    margin: 10px 0;
 }
 
-#footer .social-icon{
+#footer .social-icon {
     display: flex;
     margin-bottom: 30px;
 }
-#footer .social-item{
+
+#footer .social-item {
     height: 50px;
     width: 50px;
     margin: 0 15px;
-} 
-#footer p{
+}
+
+#footer p {
     color: white;
     font-size: 1.3rem;
 }
